--- a/challenges/hacklock/css/patternlock.css
+++ b/challenges/hacklock/css/patternlock.css
@@ -53,7 +53,7 @@ body{
 
 
 .patternlockbutton{
-	background-image:url(../_img/button.png);
+	background-image:url(../img/button.png);
 	background-repeat:no-repeat;
 	display:block;
 	width:53px;
@@ -64,15 +64,15 @@ body{
 }
 
 .touched{
-	background-image:url(../_img/button_active.png);
+	background-image:url(../img/button_active.png);
 }
 
 .multiple{
-	background-image:url(../_img/button_active2.png);
+	background-image:url(../img/button_active2.png);
 }
 
 .patternlocklinehorizontal{
-	background-image:url(../_img/line_hor.png);
+	background-image:url(../img/line_hor.png);
 	background-repeat:no-repeat;
 	height:83px;
 	width:53px;
@@ -83,7 +83,7 @@ body{
 }
 
 .patternlocklinevertical{
-	background-image:url(../_img/line_ver.png);
+	background-image:url(../img/line_ver.png);
 	background-repeat:no-repeat;
 	height:53px;
 	width:83px;
@@ -94,7 +94,7 @@ body{
 }
 
 .patternlocklinediagonalforward{
-	background-image:url(../_img/line_diagonal1.png);
+	background-image:url(../img/line_diagonal1.png);
 	background-repeat:no-repeat;
 	height:83px;
 	width:83px;
@@ -105,7 +105,7 @@ body{
 }
 
 .patternlocklinediagonalbackwards{
-	background-image:url(../_img/line_diagonal2.png);
+	background-image:url(../img/line_diagonal2.png);
 	background-repeat:no-repeat;
 	height:83px;
 	width:83px;
