Add scholar & research profile links in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,8 @@
             <a class="p-lr-10" href="https://linkedin.com/in/vitalyford" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
             <a class="p-lr-10" href="https://github.com/vitalyford" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
             <a class="p-lr-10" href="https://www.arcadia.edu/profile/vitaly-ford" target="_blank" rel="noopener noreferrer"><i class="fas fa-university"></i></a>
+            <a class="p-lr-10" href="https://scholar.google.com/citations?user=49RgkBcAAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><i class="fas fa-graduation-cap"></i></a>
+            <a class="p-lr-10" href="https://www.researchgate.net/profile/Vitaly_Ford" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i></a>
         </p>
         <hr>
     </div>
