Add license message in the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,7 @@
             <a class="p-lr-10" href="https://www.researchgate.net/profile/Vitaly_Ford" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate"></i></a>
         </p>
         <hr>
+        <p class="sublead">Licensed under GNU General Public License v3.0 &copy; Vitaly Ford</p>
     </div>
 </div>
 
