--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -22,6 +22,7 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li><a href="/docs/obscurity-in-cybersecurity.pdf" target="_blank" rel="noopener norefferer">Obscurity in Cybersecurity</a></li>
+                    <li><a href="/docs/VitalyFord-ML-and-AI.pdf" target="_blank" rel="noopener norefferer">Machine Learning and Artificial Intelligence</a></li>
                     <li><a href="/docs/aws.pdf" target="_blank" rel="noopener norefferer">Cloud (AWS) Workshop</a></li>
                     <li><a href="/docs/VitalyFord-AMI-PrivacyDataMining.pdf" target="_blank" rel="noopener norefferer">AMI Privacy-preserving Data Mining</a></li>
                     <li><a href="/docs/VitalyFord-Energy-Fraud-Detection.pdf" target="_blank" rel="noopener norefferer">Energy Fraud Detection</a></li>
