--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -45,7 +45,7 @@
                     <li{% if page.name == "07-Useful-Resources.html" %} class="active"{% endif %}><a href="/pentest/07-Useful-Resources/">07 Useful Resources</a></li>
                 </ul>
             </li>
-            <li><a href="/et/">Meet</a></li>
+            <li><a href="/et">Meet</a></li>
             <li{% if page.name == "contact.html" %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
         </ul>
     </div><!--/.nav-collapse -->
