Update schedule with capstone and other meetings

--- a/assets/css/navbar-fixed-top.css
+++ b/assets/css/navbar-fixed-top.css
@@ -78,6 +78,10 @@ code {
   background-color: #e3b5b5;
 }
 
+.other {
+  background-color: #d6d4e4;
+}
+
 .style-2901 {
 	background-color: #eee;
 	padding: 40px 60px;
